/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    `java-library`
    `maven-publish`
}

repositories {
    mavenLocal()
    maven {
        url = uri("https://repo.maven.apache.org/maven2/")
    }

}

dependencies {
    api("org.springframework.boot:spring-boot-starter-web:2.6.2")
    api("org.springframework.boot:spring-boot-starter-security:2.6.2")
    api("org.springframework.security:spring-security-aspects:5.6.1")
    api("org.liquibase:liquibase-core:4.5.0")
    api("org.springframework.boot:spring-boot-starter-data-jpa:2.6.2")
    api("org.springframework.boot:spring-boot-starter-amqp:2.6.2")
    api("com.h2database:h2:1.4.200")
    api("ch.qos.logback:logback-classic:1.2.9")
    api("org.slf4j:jcl-over-slf4j:1.7.32")
    api("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.1")
    api("org.apache.httpcomponents:httpclient:4.5.13")
    api("org.apache.httpcomponents:httpmime:4.5.13")
    api("org.apache.commons:commons-lang3:3.12.0")
    api("org.apache.commons:commons-text:1.9")
    api("com.google.guava:guava:31.0.1-jre")
    api("com.patex:plural-resource-bundle:0.0.2")
    api("com.patex:fuzzySearch:0.2.1")
    api("com.ibm.icu:icu4j:72.1")
    api("com.ibm.icu:icu4j-charset:72.1")

    implementation("org.mapstruct:mapstruct:1.4.2.Final")
    annotationProcessor("org.mapstruct:mapstruct-processor:1.4.2.Final")
    api(project(":common"))
    testImplementation("org.springframework.amqp:spring-rabbit-test:2.4.1")
    testImplementation("org.springframework.boot:spring-boot-starter-test:2.6.2")
    testImplementation("org.mockito:mockito-core:4.0.0")
    testImplementation("com.sun.xml.bind:jaxb-impl:3.0.1")
    testImplementation("com.sun.xml.bind:jaxb-core:3.0.1")
    testImplementation("javax.activation:activation:1.1.1")
    testImplementation("com.patex:fb2-java:0.2")
    compileOnly("org.projectlombok:lombok:1.18.24")
    annotationProcessor("org.projectlombok:lombok:1.18.24")
    testCompileOnly("org.projectlombok:lombok:1.18.24")
    testAnnotationProcessor("org.projectlombok:lombok:1.18.24")

}

group = "com.patex.zombielib2"
version = "0.39-SNAPSHOT"
description = "core"
java.sourceCompatibility = JavaVersion.VERSION_17

publishing {
    publications.create<MavenPublication>("maven") {
        from(components["java"])
    }
}

tasks.withType<JavaCompile>() {
    options.encoding = "UTF-8"
}

tasks.withType<Javadoc>() {
    options.encoding = "UTF-8"
}
